--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         <span class="text-primary">Crepaldi</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Rua Malméria, Jardim Paulista, SP · (13) 9 9130-0477 ·
+                        Rua Malméria, Jardim Paulista, SP · (13) 99130-0477 ·
                         <a href="mailto:gabriel.crepaldi776@gmail.com">gabriel.crepaldi776@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Busco uma oportunidade onde será possível aplicar os conhecimentos que tenho, que estou obtendo e adquirir experiência profissional a fim de atingir maior capacitação para o mercado de trabalho.</p>
+                    <p class="lead mb-5">Busco uma oportunidade onde será possível aplicar os conhecimentos que tenho, que estou obtendo e adquirir experiência profissional afim de atingir maior capacitação para o mercado de trabalho.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/CrepaldiGabriel" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/gabriel-crepaldi-barbosa-428363231/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
